# minisat

./: CMakeLists.txt
minisat/core/: Main.cc
minisat/simp/: Main.cc
minisat/utils/: ParseUtils.h  System.cc  System.h
